line spacing was fixed

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -27,7 +27,6 @@
     height: 300px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-bottom: 48px;
   }
 
   &__card:not(:nth-child(4n)) {
